# gtftools

./: Cargo.toml  README.md
benches/: benchmarking.rs
benches/data/: dual.gtf
data/: example.gtf
examples/: Cargo.toml
examples/src/: main.rs
src/: lib.rs  main.rs
src/features/: introns.rs  mod.rs
src/parse/: attribute.rs  mod.rs  serialize.rs  utils.rs
src/types/: attribute_ref.rs  field.rs  gtf.rs  gtf_reader.rs  gtf_ref.rs  mod.rs  reader.rs
src/types/attribute/: attribute.rs  attribute_ref.rs  field.rs  mod.rs
src/types/record/: mod.rs  record.rs  record_ref.rs
