[package]
name = "nom-gtf"
version = "0.1.4"
edition = "2021"
description = "A barebones GTF reader written with nom"
license = "MIT"
repository = "https://github.com/noamteyssier/nom-gtf"
documentation = "https://docs.rs/nom-gtf"
keywords = ["bioinformatics", "GTF", "parser", "nom", "ensembl"]
categories = ["science"]

[dependencies]
anyhow = "1.0.65"
bstr = "1.0.1"
nom = "7.1.1"

[dev-dependencies]
criterion = "0.4.0"
flate2 = "1.0.24"

[[bench]]
name = "benchmarking"
harness = false
