[package]
name = "gtftools"
version = "0.1.6"
edition = "2021"
description = "A barebones GTF toolkit with fast nom-based IO"
license = "MIT"
repository = "https://github.com/noamteyssier/gtftools"
documentation = "https://docs.rs/gtftools"
keywords = ["bioinformatics", "GTF", "parser", "nom", "ensembl"]
categories = ["science"]

[dependencies]
anyhow = "1.0.65"
bstr = "1.0.1"
nom = "7.1.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"

[dev-dependencies]
criterion = "0.4.0"
flate2 = "1.0.24"

[[bench]]
name = "benchmarking"
harness = false
